@@ -536,3 +536,4 @@
   - bugfix:  loosing data when sending FS20 messages in a group
   - bugfix:  better handling of disconnected CUN
   - feature: softfhtbuffer added to CUL
+  - bugfix: pgm3: Pulldown-Menu without selected FHTDEV not possible any more
